v3/loadbalancer-result.yml
apiVersion: v1
kind: Service
metadata:
  namespace: vote
  name: lb-result
  labels:
    app: result
spec:
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
