v3/loadbalancer-vote.yml
apiVersion: v1
kind: Service
metadata:
  namespace: vote
  name: lb-vote
  labels:
    app: vote
spec:
  selector:
    app: vote
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
