v3/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
  namespace: vote
spec:
  type: NodePort
  ports:
  - name: "vote-service"
    port: 5000 # This is the port exposed by the container
    targetPort: 80 # This is the port used by node to talk to container
    nodePort: 31000 # This is the port exposed by the node -- Send your request here to verify
  selector:
    app: vote
